--- a/frontend/client/src/App.css
+++ b/frontend/client/src/App.css
@@ -1,7 +1,48 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Pacifico');
-
-body {
+html body{
+  height: 100%;
+  width: 100%;
   margin: 0;
+}
+
+
+.container-login100 {
+  width: 100%;  
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  background-image: url('back-img.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: 1;  
+}
+
+.container-login100::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.65);
+}
+
+.wrap-login100 {
+  width: 390px;
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 30px 0px 50px 0px;
+  background: transparent;
 }
 
 p {
