--- a/aiml-WEB/client/src/App.css
+++ b/aiml-WEB/client/src/App.css
@@ -17,7 +17,8 @@ html body{
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background-image: url('back-img.png');
+  background-image: url('bigmax.jpg');
+  /*background-image: url('back-img.png');*/
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -34,7 +35,7 @@ html body{
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(0,0,0,0.65);
+  background-color: rgba(0,0,0,0.2);
 }
 
 .wrap-login100 {
@@ -51,7 +52,7 @@ p {
 }
 
 .App {
-  background-color: #1EE494;
+  background-color:#FFF;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -62,7 +63,7 @@ p {
 .chatroom {
   width: 360px;
   height: 600px;
-  background-color: rgba(0,0,0, .7);
+  background-color: rgba(0,0,0, 0.3);
   border-radius: 5px;
   overflow: hidden;
   box-shadow: 0 0 8px 0 rgba(0,0,0, 0.3);
@@ -70,7 +71,7 @@ p {
 
 .chatroom h3 {
   font-family: 'Pacifico', cursive;
-  background-color: rgba(30, 228, 148, 0.7);
+  /*background-color: rgba(30, 228, 148, 0.7);*/
   color: #FFF;
   margin: 0;
   height: 40px;
@@ -102,12 +103,20 @@ p {
 }
 
 .chatroom .chats .chat img {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
+ /* width: 60px;
+  height: 50px;*/
+  border-radius: 90%;
+  width: 35px;
+  height: 35px;
+  margin-left: -55px;
   position: absolute;
-  top: -10px;
-  left: 0px;
+  display: block;
+
+  top: -2px;
+}
+
+.chatroom .chats .chat.left {
+  margin-left: 35px;
 }
 
 .chatroom .chats .chat.right {
@@ -123,16 +132,16 @@ p {
 .chatroom .input {
   height: 40px;
   width: 100%;
-  background: rgba(30, 228, 148, 0.7);
+  /*background: rgba(30, 228, 148, 0.7);*/
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
 .chatroom .input input[type="text"] {
-  background: rgba(255, 255, 255, 0.5);
+  /*background: rgba(255, 255, 255, 0.1);*/
   outline: 0;
-  border: 2px solid #1EE494;
+  border: 1px solid #CCCCCC;
   padding: 0 5px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -141,30 +150,32 @@ p {
   width: 270px;
   box-sizing: border-box;
   font-size: 14px;
+  color:#000;
 }
 
 .chatroom .input input[type="submit"] {
   background: transparent;
-  border: 1px solid #1EE494;
+  border: 1px solid #CCCCCC;
   height: 30px;
   width: 70px;
   font-size: 14px;
   box-sizing: border-box;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+/*  border-top-right-radius: 5px;*/
+/*  border-bottom-right-radius: 5px;*/
   cursor: pointer;
   transition: all 0.3s ease;
+  color: #CCCCCC;
 }
 
 .chatroom .input input[type="submit"]:hover {
-  background: #1EE494;
-  color: #FFF;
+  background: #6666CC;
+  color: #fff;
 }
 
 
 .chatroom .input button[name="plus"] {
   background: transparent;
-  border: 1px solid #1EE494;
+  border: 1px solid #CCCCCC;
   height: 30px;
   width: 70px;
   font-size: 14px;
@@ -173,9 +184,10 @@ p {
   border-bottom-right-radius: 5px;
   cursor: pointer;
   transition: all 0.3s ease;
+  color: #CCCCCC;
 }
 .chatroom .input button[name="plus"]:hover {
-  background: #1EE494;
+  background: #6666CC;
   color: #FFF;
 }
 
@@ -183,7 +195,9 @@ p {
   
   height: 60px;
   width: 360px;
-  background: rgba(30, 228, 148, 0.7);
+  background-color:#6666CC; 
+  /*background: rgba(30, 228, 148, 0.7);*/
+  background: rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -191,12 +205,14 @@ p {
 
 
 #Customize .CustomizeForm input[type="InputText"] {
-  background: rgba(255, 255, 255, 0.5);
+  /*background: rgba(255, 255, 255, 0.1);*/
   outline: 0;
-  border: 2px solid #1EE494;
+  border: 1px solid #999999;
   padding: 0 5px;
   border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   margin-left: 10px;
   height: 30px;
   width: 40%;
@@ -205,12 +221,12 @@ p {
 }
 
 #Customize .CustomizeForm input[type="InputAnswer"] {
-  background: rgba(255, 255, 255, 0.5);
+  /*background: rgba(255, 255, 255, 0.1);*/
   outline: 0;
   border: 2px solid #1EE494;
   padding: 0 5px;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
+  /*order-top-left-radius: 5px;*/
+  /*border-bottom-left-radius: 5px;*/
   margin-left: 10px;
   height: 30px;
   width: 270px;
@@ -218,7 +234,23 @@ p {
   font-size: 14px;
 }
 
+#Customize .CustomizeForm input[type="submit"] {
+  background: transparent;
+  border: 1px solid #CCCCCC;
+  height: 30px;
+  width: 70px;
+  font-size: 14px;
+  box-sizing: border-box;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  color: #CCCCCC;
+}
+
 #Customize .CustomizeForm input[type="submit"]:hover {
-  background: #1EE494;
+  background: #6666CC;
   color: #FFF;
 }
